css/style.css
/* Universial Styles */
html {
  font-family: 'Montserrat', sans-serif;
}

.container {
  padding: 1em 1.5em;
}

/* Header, Nav & Logo */
header {
  display: flex;
  justify-content: center;
  background-color: #aed6c5;
}

nav {
  display: flex;
  align-items: center;
}

nav ul {
  display: flex;
  flex-wrap: wrap;
}

nav ul li {
  list-style-type: none;
  margin-left: 30px;
  padding: 1em 0;
}

nav ul li a {
  padding: 0 0.6em;
  text-transform: uppercase;
}

.header-socials {
  margin-left: 3em;
}

.logo {
  display: flex;
  justify-content: center;
}

.logo img {
  height: 10em;
  width: 10em;
}

@media only screen and (max-width: 519px) {
  nav {
    flex-direction: column;
  }

  nav ul {
    flex-direction: column;
  }

  nav ul li {
    list-style-type: none;
    margin-left: initial;
    padding: 1em 0;
  }
}

/* SECTION 1: Carousel */

.carousel {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.car-item {
  display: flex;
  padding: 0 1em;
  flex-direction: column;
}

.car-item img {
  width: 10em;
  height: 15em;
  margin: 0 0.8em;
  border: 1px solid black;
}

.section1 .carousel .car-item span {
  display: flex;
  justify-content: center;
  padding: 1em 0;
  text-transform: uppercase;
  position: relative;
  bottom: 25%;
}

/* SECTION 2: Articles */
.section2 {
  display: flex;
  justify-content: center;
}

.main-content {
  display: flex;
  justify-content: center;
  width: 850px;
}

@media only screen and (max-width: 631px) {
  .main-content {
    display: block;
  }
  
}

.articles {
  display: flex;
  flex-direction: column;
  margin-right: 2em;
  width: 100%;
}

/* ARTICLE BOX *** ARTICLE BOX */
.article-box {
  width: 100%;
  min-width: 150px;
  border: 1px solid black;
  margin-bottom: 1em;
}

.article-box img {
  width: 100%;
  object-fit: cover;
}

.article-box h2 {
  font-weight: bold;
  font-size: 1.5em;
  text-align: center;
  text-transform: uppercase;
  padding: 0.6em 0;
}

@media only screen and (max-width: 500px) {
  .article-box h2 {
    font-size: 1em;
  }
  
}

.article-box hr {
  width: 60%;
  margin: 0 auto;
  height: 2px;
  background-color:#666;
}

.article-box #article_exerpt {
  margin: 1em 0;
}

.article-box span {
  text-align: center;
  text-transform: uppercase;
}

.article-box #read_more {
  text-align: center;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 1em;
}

.article-box .article-box-footer {
  height: auto;
  width: 100%;
  border-top: 2px solid #aed6c5;
  border-bottom: 2px solid #aed6c5;
  display: flex;
  justify-content: center;
}

.article-box .article-box-footer :last-child{
  text-align: end;
}

.article-box .article-socials {
  text-align: center;
}

.article-box-footer .fab {
  padding: 0.6em;
}

.aboutme-box {
  width: 60%;
  min-width: 150px;
  height: 300px;
  border: 1px solid black;
}

/* Footer */

footer {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 250px;
}

footer span {
  padding: 1em;
}

footer a {
  padding: 1em;
}

footer ul {
  display: flex;
  flex-wrap: wrap;
}

footer ul li {
  list-style-type: none;
  margin-left: 30px;
  padding: 1em 0;
}

